--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 $(document).ready(init)
 </script>
 
-<div class="canvas-wrapper">
+<div class="game-wrapper">
+<div class="sidebar">
+    <div class="unit-info">
+    </div>
+</div>
 <canvas width="420" height="420">
 
 </canvas>
