Preliminary support for action menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="render.js"></script>
     <script src="map.js"></script>
     <script src="unit.js"></script>
+    <script src="ui.js"></script>
 </head>
 <body>
 
@@ -19,7 +20,10 @@ $(document).ready(init)
 
 <div class="game-wrapper">
 <div class="sidebar">
-    <div class="unit-info">
+    <div class="unit-info blue-box">
+    .
+    </div>
+    <div class="action-menu blue-box">
     </div>
 </div>
 <canvas width="420" height="420">
