Initial support for enemy units

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ $(document).ready(init)
 
 <div class="game-wrapper">
 <div class="sidebar">
-    <div class="unit-info blue-box">
+    <div class="unit-info">
     .
     </div>
     <div class="action-menu blue-box">
