--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ $(document).ready(init)
 <div class="game-wrapper">
 <div class="sidebar">
     <div class="unit-info">
-    .
+        <div class="name">.</div>
+        <div>HP 
+            <span class="hp"></span> /
+            <span class="base-hp"></span>
+        </div>
     </div>
     <div class="menu action-menu blue-box">
     </div>
