Chapter object, reorganization, lots of fixes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="ui.js"></script>
     <script src="csmap.js"></script>
     <script src="battle.js"></script>
+    <script src="chapter0.js"></script>
 </head>
 <body>
 
