--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@ $(document).ready(init)
             <tr><td colspan="3" class="attacker-name blue-box"></td></tr>
             <tr>
                 <td class="defender-hit red-box"></td>
-                <td class="hit neutral-box">Hit</td>
+                <td class="hit neutral-box">HIT</td>
                 <td class="attacker-hit blue-box"></td>
             </tr>
             <tr>
                 <td class="defender-dmg red-box"></td>
-                <td class="dmg neutral-box">Dmg</td>
+                <td class="dmg neutral-box">DMG</td>
                 <td class="attacker-dmg blue-box"></td>
             </tr>
             <tr><td colspan="3" class="defender-name red-box"></td></tr>
