--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
     <script src="main.js"></script>
     <script src="render.js"></script>
+
     <script src="map.js"></script>
+    <script src="chapter0.js"></script>
+
     <script src="unit.js"></script>
+    <script src="battle.js"></script>
+
     <script src="ui.js"></script>
     <script src="csmap.js"></script>
-    <script src="battle.js"></script>
-    <script src="chapter0.js"></script>
+
+    <script src="playerTurn.js"></script>
+    <script src="enemyTurn.js"></script>
 </head>
 <body>
 
