--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="battle.js"></script>
 
     <script src="ui.js"></script>
+    <script src="message.js"></script>
     <script src="csmap.js"></script>
 
     <script src="playerTurn.js"></script>
@@ -60,9 +61,10 @@ $(document).ready(init)
         </table>
     </div>
 </div>
-<canvas width="420" height="420">
-
-</canvas>
+<div class="canvas-column">
+    <canvas width="420" height="420"></canvas>
+    <div class="message"></div>
+</div>
 <div class="sidebar right-sidebar">
     <div class="victory-condition neutral-box"></div>
 </div>
