--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@ $(document).ready(init)
                 </div>
             </div>
             <div class="menu action-menu neutral-box">
-                <ul></ul>
             </div>
             <div class="menu weapon-menu neutral-box">
-                <ul></ul>
             </div>
             <div class="battle-stats-panel">
                 <table>
@@ -82,15 +80,15 @@ $(document).ready(init)
         <h3>Controls</h3>
         <table>
             <tr>
-                <td class="control">Arrow keys -</td>
+                <td class="control">Arrow keys:</td>
                 <td>move cursor</td>
             </tr>
             <tr>
-                <td class="control">F -</td>
+                <td class="control">F:</td>
                 <td>select/choose</td>
             </tr>
             <tr>
-                <td class="control">D -</td>
+                <td class="control">D:</td>
                 <td>back</td>
             </tr>
         </table>
