--- a/index.html
+++ b/index.html
@@ -98,15 +98,18 @@ $(document).ready(init)
     </div>
 </div>
 
+<div class="dark-overlay"></div>
 <div class="unit-info-window blue-box">
     <div class="common">
         <div>
             <img src="images/kumagawa.png" />
         </div>
         <div>
-            <div class="name">Kumagawa</div>
-            <div class="uclass">Minus</div>
-            <div class="level">Lv 1 Exp 23</div>
+            <div class="name"></div>
+            <div class="uclass"></div>
+            <div class="level-info">
+                Lv <span class="level"></span>
+                Exp <span class="exp"></span></div>
         </div>
     </div>
     <div class="tab-container">
@@ -116,33 +119,28 @@ $(document).ready(init)
         </div>
         <div class="content">
             <div class="tab-content tab-content-inventory">
-                <div>Iron sword</div>
-                <div>Iron sword</div>
-                <div>Iron sword</div>
-                <div>Iron sword</div>
-                <div>Iron sword</div>
             </div>
             <div class="tab-content tab-content-stats">
                 <table>
                     <tr>
-                        <td>Str</td><td class="stat str">1</td>
-                        <td>Skill</td> <td class="stat skill">3</td>
+                        <td>Str</td><td class="stat str"></td>
+                        <td>Skill</td> <td class="stat skill"></td>
                     </tr>
                     <tr>
-                        <td>Mag</td><td class="stat mag">12</td>
-                        <td>Speed</td> <td class="stat speed">5</td>
+                        <td>Mag</td><td class="stat mag"></td>
+                        <td>Speed</td> <td class="stat speed"></td>
                     </tr>
                     <tr>
-                        <td>Def</td><td class="stat def">2</td>
-                        <td>Luck</td> <td class="stat luck">15</td>
+                        <td>Def</td><td class="stat def"></td>
+                        <td>Luck</td> <td class="stat luck"></td>
                     </tr>
                     <tr>
-                        <td>Res</td><td class="stat res">12</td>
-                        <td>Con</td> <td class="stat con">15</td>
+                        <td>Res</td><td class="stat res"></td>
+                        <td>Move</td> <td class="stat move"></td>
                     </tr>
                     <tr>
-                        <td>Aid</td><td class="stat aid">12</td>
-                        <td></td> <td></td>
+                        <td>Aid</td><td class="stat aid"></td>
+                        <td>Con</td> <td class="stat con"></td>
                     </tr>
                 </table>
             </div>
