unit-info-window: inventory

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ $(document).ready(init)
     <div class="tab-container">
         <div class="labels">
             <div class="tab-label-inventory">Inventory
-            </div><div class="selected tab-label-stats">Stats</div>
+            </div><div class="tab-label-stats">Stats</div>
         </div>
         <div class="content">
             <div class="tab-content tab-content-inventory">
