Make the face of Ace

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ $(document).ready(init)
 <div class="unit-info-window blue-box">
     <div class="common">
         <div>
-            <img src="images/kumagawa.png" />
+            <img />
         </div>
         <div>
             <div class="name"></div>
