--- a/index.html
+++ b/index.html
@@ -39,15 +39,29 @@ $(document).ready(init)
     <div class="game-wrapper">
         <div class="sidebar left-sidebar">
             <div class="unit-info">
-                <div class="name">.</div>
-                <div class="hp-bar-container">
-                    <div class="hp-bar">
-                        <div class="hp-bar-filled"></div>
-                    </div>
+                <div class="image-wrapper">
+                    <img />
                 </div>
-                <div class="hp-text">HP 
-                    <span class="hp"></span> /
-                    <span class="base-hp"></span>
+                <div class="not-image">
+                    <div class="name">.</div>
+                    <div class="hp-bar-container bar-container">
+                        <div class="bar hp-bar">
+                            <div class="bar-filled hp-bar-filled"></div>
+                        </div>
+                        <div class="bar-text">HP 
+                            <span class="hp"></span> /
+                            <span class="base-hp"></span>
+                        </div>
+                    </div>
+                    <div class="mp-bar-container bar-container">
+                        <div class="bar mp-bar">
+                            <div class="bar-filled mp-bar-filled"></div>
+                        </div>
+                        <div class="bar-text">MP 
+                            <span class="mp"></span> /
+                            <span class="base-mp"></span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="menu action-menu neutral-box">
