demo-v0.000001a: buff Ace so he can actually win

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 <div class="title">
 <h1>Aqua Emblem</h1>
-<span class="version">demo-v0.00001</span>
+<span class="version">demo-v0.000001a</span>
 </div>
 <script>
 $(document).ready(init)
@@ -107,6 +107,10 @@ $(document).ready(init)
             <tr>
                 <td class="control">D:</td>
                 <td>back</td>
+            </tr>
+            <tr>
+                <td class="control">S:</td>
+                <td>more info (units)</td>
             </tr>
         </table>
     </div>
