--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@ $(document).ready(init)
     <div class="tab-container">
         <div class="labels">
             <div class="tab-label-inventory">Inventory
-            </div><div class="tab-label-stats">Stats</div>
+                <span class="tab-id">inventory</span>
+            </div><div class="tab-label-stats">
+                <span class="tab-id">stats</span>
+                Stats
+            </div>
         </div>
         <div class="content">
             <div class="tab-content tab-content-inventory">
