Add insignia for enemy team

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ $(document).ready(init)
 <div class="dark-overlay"></div>
 <div class="unit-info-window blue-box">
     <div class="common">
-        <div>
+        <div class="image-wrapper">
             <img />
         </div>
         <div>
