--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
 <div class="title">
-<h1>Aqua Emblem</h1>
-<span class="version">demo-v0.000001a</span>
+<img src="images/title_cropped.png" />
+<p class="version">demo-v0.000001a</p>
 </div>
 <script>
 $(document).ready(init)
