Fix problem with tab changing

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 <div class="title">
 <img src="images/title_cropped.png" />
-<p class="version">demo-v0.000001a</p>
+<p class="version">demo-v0.00001</p>
 </div>
 <script>
 $(document).ready(init)
