Coffee-fy message.js

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-    <script src="main.js"></script>
-    <script src="render.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/render.js"></script>
 
-    <script src="map.js"></script>
-    <script src="chapters/chapter1.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/chapters/chapter1.js"></script>
 
-    <script src="unit.js"></script>
-    <script src="battle.js"></script>
+    <script src="js/unit.js"></script>
+    <script src="js/battle.js"></script>
 
-    <script src="ui.js"></script>
-    <script src="unitInfoWindow.js"></script>
-    <script src="message.js"></script>
-    <script src="csmap.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/unitInfoWindow.js"></script>
+    <script src="lib/message.js"></script>
+    <script src="js/csmap.js"></script>
 
-    <script src="playerTurn.js"></script>
-    <script src="enemyTurn.js"></script>
+    <script src="js/playerTurn.js"></script>
+    <script src="js/enemyTurn.js"></script>
 </head>
 <body>
 <div class="title">
