Coffee/refactor. Tiles now render

--- a/index.html
+++ b/index.html
@@ -9,22 +9,15 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-    <script src="js/main.js"></script>
-    <script src="js/render.js"></script>
+    <script src="lib/ui.js"></script>
 
-    <script src="js/map.js"></script>
-    <script src="js/chapters/chapter1.js"></script>
+    <script src="lib/chapter.js"></script>
+    <script src="lib/map.js"></script>
 
-    <script src="js/unit.js"></script>
-    <script src="js/battle.js"></script>
+    <script src="lib/chapters/chapter1.js"></script>
 
-    <script src="js/ui.js"></script>
-    <script src="js/unitInfoWindow.js"></script>
+    <script src="lib/unit.js"></script>
     <script src="lib/message.js"></script>
-    <script src="js/csmap.js"></script>
-
-    <script src="js/playerTurn.js"></script>
-    <script src="js/enemyTurn.js"></script>
 </head>
 <body>
 <div class="title">
