The cursor moves once again

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <script src="lib/chapter.js"></script>
     <script src="lib/map.js"></script>
+    <script src="lib/csmap.js"></script>
 
     <script src="lib/chapters/chapter1.js"></script>
 
