--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <script src="lib/ui.js"></script>
+    <script src="lib/message.js"></script>
 
     <script src="lib/chapter.js"></script>
+    <script src="lib/playerTurn.js"></script>
+
     <script src="lib/map.js"></script>
     <script src="lib/csmap.js"></script>
 
+    <script src="lib/unit.js"></script>
+
+
     <script src="lib/chapters/chapter1.js"></script>
 
-    <script src="lib/unit.js"></script>
-    <script src="lib/message.js"></script>
 </head>
 <body>
 <div class="title">
