--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
     <script src="lib/ui.js"></script>
+    <script src="lib/unitInfoBox.js"></script>
     <script src="lib/message.js"></script>
 
     <script src="lib/chapter.js"></script>
