--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="lib/csmap.js"></script>
 
     <script src="lib/unit.js"></script>
-
+    <script src="lib/item.js"></script>
 
     <script src="lib/chapters/chapter1.js"></script>
 
