--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="lib/ui.js"></script>
     <script src="lib/unitInfoBox.js"></script>
+    <script src="lib/actionMenu.js"></script>
     <script src="lib/message.js"></script>
 
     <script src="lib/chapter.js"></script>
