--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <script src="lib/ui.js"></script>
     <script src="lib/unitInfoBox.js"></script>
     <script src="lib/actionMenu.js"></script>
+    <script src="lib/weaponMenu.js"></script>
+    <script src="lib/battleStatsPanel.js"></script>
     <script src="lib/message.js"></script>
 
     <script src="lib/chapter.js"></script>
     <script src="lib/playerTurn.js"></script>
+    <script src="lib/battle.js"></script>
 
     <script src="lib/map.js"></script>
     <script src="lib/csmap.js"></script>
