--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script src="lib/chapter.js"></script>
     <script src="lib/playerTurn.js"></script>
+    <script src="lib/enemyTurn.js"></script>
     <script src="lib/battle.js"></script>
 
     <script src="lib/map.js"></script>
