--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-    <script src="lib/ui.js"></script>
-    <script src="lib/unitInfoBox.js"></script>
-    <script src="lib/unitInfoWindow.js"></script>
-    <script src="lib/actionMenu.js"></script>
-    <script src="lib/weaponMenu.js"></script>
-    <script src="lib/battleStatsPanel.js"></script>
-    <script src="lib/message.js"></script>
+    <script src="lib/ui/ui.js"></script>
+    <script src="lib/ui/unitInfoBox.js"></script>
+    <script src="lib/ui/unitInfoWindow.js"></script>
+    <script src="lib/ui/actionMenu.js"></script>
+    <script src="lib/ui/weaponMenu.js"></script>
+    <script src="lib/ui/battleStatsPanel.js"></script>
+    <script src="lib/ui/message.js"></script>
 
     <script src="lib/chapter.js"></script>
     <script src="lib/playerTurn.js"></script>
