Unit-class system

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="lib/csmap.js"></script>
 
     <script src="lib/unit.js"></script>
+    <script src="lib/uclass.js"></script>
     <script src="lib/item.js"></script>
 
     <script src="lib/chapters/chapter1.js"></script>
