Add CRT to battleStatsPanel

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@ $(document).ready(init)
                         <td class="dmg neutral-box">DMG</td>
                         <td class="attacker-dmg blue-box"></td>
                     </tr>
+                    <tr>
+                        <td class="defender-crt red-box"></td>
+                        <td class="crt neutral-box">CRT</td>
+                        <td class="attacker-crt blue-box"></td>
+                    </tr>
                     <tr><td colspan="3" class="defender-name red-box"></td></tr>
                 </table>
             </div>
