--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="lib/uclass.js"></script>
     <script src="lib/item.js"></script>
 
-    <script src="lib/chapters/chapter1.js"></script>
+    <script src="lib/chapters/test1.js"></script>
 
 </head>
 <body>
