HTML and CSS for combat stats in unit-info-window

--- a/index.html
+++ b/index.html
@@ -152,6 +152,23 @@ $(document).ready(init)
         </div>
         <div class="content">
             <div class="tab-content tab-content-inventory">
+                <div class="inventory"></div>
+                <div class="combat-stats">
+                    <table>
+                        <tr>
+                            <td>Hit</td>
+                            <td class="stat hit">100</td>
+                            <td>Evade</td>
+                            <td class="evade stat">40</td>
+                        </tr>
+                        <tr>
+                            <td>Crit</td>
+                            <td class="stat crit">10</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
             <div class="tab-content tab-content-stats">
                 <table>
