--- a/index.html
+++ b/index.html
@@ -157,42 +157,44 @@ $(document).ready(init)
                     <table>
                         <tr>
                             <td>Hit</td>
-                            <td class="stat hit">100</td>
+                            <td class="stat hit"></td>
                             <td>Evade</td>
-                            <td class="evade stat">40</td>
+                            <td class="stat evade"></td>
                         </tr>
                         <tr>
+                            <td>Atk</td>
+                            <td class="stat atk"></td>
                             <td>Crit</td>
-                            <td class="stat crit">10</td>
-                            <td></td>
-                            <td></td>
+                            <td class="stat crit"></td>
                         </tr>
                     </table>
                 </div>
             </div>
             <div class="tab-content tab-content-stats">
-                <table>
-                    <tr>
-                        <td>Str</td><td class="stat str"></td>
-                        <td>Skill</td> <td class="stat skill"></td>
-                    </tr>
-                    <tr>
-                        <td>Mag</td><td class="stat mag"></td>
-                        <td>Speed</td> <td class="stat speed"></td>
-                    </tr>
-                    <tr>
-                        <td>Def</td><td class="stat def"></td>
-                        <td>Luck</td> <td class="stat luck"></td>
-                    </tr>
-                    <tr>
-                        <td>Res</td><td class="stat res"></td>
-                        <td>Move</td> <td class="stat move"></td>
-                    </tr>
-                    <tr>
-                        <td>Aid</td><td class="stat aid"></td>
-                        <td>Con</td> <td class="stat con"></td>
-                    </tr>
-                </table>
+                <div class="stats">
+                    <table>
+                        <tr>
+                            <td>Str</td><td class="stat str"></td>
+                            <td>Skill</td> <td class="stat skill"></td>
+                        </tr>
+                        <tr>
+                            <td>Mag</td><td class="stat mag"></td>
+                            <td>Speed</td> <td class="stat speed"></td>
+                        </tr>
+                        <tr>
+                            <td>Def</td><td class="stat def"></td>
+                            <td>Luck</td> <td class="stat luck"></td>
+                        </tr>
+                        <tr>
+                            <td>Res</td><td class="stat res"></td>
+                            <td>Move</td> <td class="stat move"></td>
+                        </tr>
+                        <tr>
+                            <td>Aid</td><td class="stat aid"></td>
+                            <td>Con</td> <td class="stat con"></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
