"Wield" part of unit-info-window

--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@ $(document).ready(init)
                         </tr>
                     </table>
                 </div>
+                <div class="wield">
+                    Wield:
+                    <div class="weapons">
+                        <div><img src="images/steel_sword.png" /></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
