Add "what's new"

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ $(document).ready(init)
         <table>
             <tr>
                 <td class="control">Arrow keys:</td>
-                <td>move cursor</td>
+                <td>move cursor / switch tabs</td>
             </tr>
             <tr>
                 <td class="control">F:</td>
-                <td>select/choose</td>
+                <td>select / choose</td>
             </tr>
             <tr>
                 <td class="control">D:</td>
@@ -124,6 +124,18 @@ $(document).ready(init)
                 <td>more info (units)</td>
             </tr>
         </table>
+        <br />
+        <h3>What's new in demo-v0.00001</h3>
+        <ul>
+            <li>Press S while hovering over a unit to view their inventory and
+            stats.</li>
+            <li>Units now have classes and levels. Though you can't actually level up.</li>
+            <li>HIT, DMG, and CRT are calculated using actual formulas. (Lifted
+            straight out of FE 6/7/8.)</li>
+            <li>Ace is now joined by his trusty companion, Arrow. Bows currently have a range of 1,
+            though this will be changed in the next demo release.</li>
+            <li>Various graphical improvements.</li>
+        </ul>
     </div>
 </div>
 
