Object-orientate the item system

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <script src="lib/map.js"></script>
     <script src="lib/csmap.js"></script>
 
+    <script src="lib/item.js"></script>
     <script src="lib/unit.js"></script>
     <script src="lib/uclass.js"></script>
-    <script src="lib/item.js"></script>
 
     <script src="lib/chapters/test1.js"></script>
 
@@ -132,8 +132,7 @@ $(document).ready(init)
             <li>Units now have classes and levels. Though you can't actually level up.</li>
             <li>HIT, DMG, and CRT are calculated using actual formulas. (Lifted
             straight out of FE 6/7/8.)</li>
-            <li>Ace is now joined by his trusty companion, Arrow. Bows currently have a range of 1,
-            though this will be changed in the next demo release.</li>
+            <li>Ace is now joined by his trusty companion, Arrow.</li>
             <li>Various graphical improvements.</li>
         </ul>
     </div>
