Fix broken images in UnitInfoWindow.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ $(document).ready(init)
             <li>Ace is now joined by his trusty companion, Arrow.</li>
             <li>Various graphical improvements.</li>
         </ul>
+        This version has been tested in Firefox and Chrome. Please tell me if you find a bug.
     </div>
 </div>
 
