--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="lib/unit.js"></script>
     <script src="lib/uclass.js"></script>
 
-    <script src="lib/chapters/test1.js"></script>
+    <script src="lib/chapters/chapter1.js"></script>
 
 </head>
 <body>
