Add weapon image to unit info box

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@ $(document).ready(init)
                     <img />
                 </div>
                 <div class="not-image">
-                    <div class="name">.</div>
+                    <div>
+                        <span class="name">.</span>
+                        <img class="equipped" />
+                    </div>
                     <div class="hp-bar-container bar-container">
                         <div class="bar hp-bar">
                             <div class="bar-filled hp-bar-filled"></div>
