Create dango for mercenary class

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="version">demo-v0.00001</div>
 </div>
 <script>
-$(document).ready(init)
+$(window).load(init)
 </script>
 
 <div class="wrapper">
@@ -223,7 +223,17 @@ $(document).ready(init)
         </div>
     </div>
 </div>
-
-<div class="invisible-images"></div>
+<div class="invisible-images">
+<img src="images/title_cropped.png"/>
+<img src="images/bandit_insignia.png"/>
+<img src="images/list_arrow.png"/>
+<img src="images/logo.png"/>
+<img src="images/characters/arrow.png"/>
+<img src="images/characters/ace.png"/>
+<img src="images/dango/mercenary.png"/>
+<img src="images/items/steel_sword.png"/>
+<img src="images/items/iron_sword.png"/>
+<img src="images/items/iron_bow.png"/>
+</div>
 </body>
 </html>
