--- a/index.html
+++ b/index.html
@@ -84,23 +84,35 @@ $(window).load(init)
             </div>
             <div class="battle-stats-panel">
                 <table>
-                    <tr><td colspan="3" class="attacker-name blue-box"></td></tr>
+                    <tr><td colspan="3" class="atk-name blue-box"></td></tr>
                     <tr>
-                        <td class="defender-hit red-box"></td>
+                        <td class="def-hit red-box">
+                            <span class="stat"></span>
+                        </td>
                         <td class="hit neutral-box">HIT</td>
-                        <td class="attacker-hit blue-box"></td>
+                        <td class="atk-hit blue-box">
+                            <span class="stat"></span>
+                        </td>
                     </tr>
                     <tr>
-                        <td class="defender-dmg red-box"></td>
+                        <td class="def-dmg red-box">
+                            <span class="stat"></span><span class="x2">&times;2</span>
+                        </td>
                         <td class="dmg neutral-box">DMG</td>
-                        <td class="attacker-dmg blue-box"></td>
+                        <td class="atk-dmg blue-box">
+                            <span class="stat"></span><span class="x2">&times;2</span>
+                        </td>
                     </tr>
                     <tr>
-                        <td class="defender-crt red-box"></td>
+                        <td class="def-crt red-box">
+                            <span class="stat"></span>
+                        </td>
                         <td class="crt neutral-box">CRT</td>
-                        <td class="attacker-crt blue-box"></td>
+                        <td class="atk-crt blue-box">
+                            <span class="stat"></span>
+                        </td>
                     </tr>
-                    <tr><td colspan="3" class="defender-name red-box"></td></tr>
+                    <tr><td colspan="3" class="def-name red-box"></td></tr>
                 </table>
             </div>
         </div>
