--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="lib/unit.js"></script>
     <script src="lib/uclass.js"></script>
 
+    <script src="lib/chapters/testHuge.js"></script>
     <script src="lib/chapters/chapter1.js"></script>
 
 </head>
