Resurrect the message system

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
     <script src="lib/ui/battleStatsPanel.js"></script>
     <script src="lib/ui/message.js"></script>
 
-    <script src="lib/allImagePaths.js"></script>
-
     <script src="lib/chapter.js"></script>
     <script src="lib/playerTurn.js"></script>
     <script src="lib/enemyTurn.js"></script>
@@ -160,6 +158,8 @@ $(window).load(init)
 </div>
 
 <div class="dark-overlay"></div>
+<div class="canvas-dark-overlay"></div>
+
 <div class="unit-info-window blue-box">
     <div class="common">
         <div class="image-wrapper">
@@ -243,7 +243,6 @@ $(window).load(init)
 <img src="images/logo.png"/>
 <img src="images/characters/arrow.png"/>
 <img src="images/characters/ace.png"/>
-<img src="images/dango/mercenary.png"/>
 <img src="images/items/steel_sword.png"/>
 <img src="images/items/iron_sword.png"/>
 <img src="images/items/iron_bow.png"/>
