Update index and chapter

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 <div class="title">
 <img src="images/title_cropped.png" />
-<div class="version">demo-v0.00001</div>
+<div class="version">demo-v0.00001a</div>
 </div>
 <script>
 $(window).load(init)
@@ -143,15 +143,8 @@ $(window).load(init)
             </tr>
         </table>
         <br />
-        <h3>What's new in demo-v0.00001</h3>
+        <h3>What's new in demo-v0.0001</h3>
         <ul>
-            <li>Press S while hovering over a unit to view their inventory and
-            stats.</li>
-            <li>Units now have classes and levels. Though you can't actually level up.</li>
-            <li>HIT, DMG, and CRT are calculated using actual formulas. (Lifted
-            straight out of FE 6/7/8.)</li>
-            <li>Ace is now joined by his trusty companion, Arrow.</li>
-            <li>Various graphical improvements.</li>
         </ul>
         This version has been tested in Firefox and Chrome. Please tell me if you find a bug.
     </div>
@@ -243,9 +236,16 @@ $(window).load(init)
 <img src="images/logo.png"/>
 <img src="images/characters/arrow.png"/>
 <img src="images/characters/ace.png"/>
+<img src="images/dango/enemy/mercenary.png"/>
+<img src="images/dango/enemy/archer.png"/>
+<img src="images/dango/player/mercenary.png"/>
+<img src="images/dango/player/archer.png"/>
+<img src="images/dango/done/mercenary.png"/>
+<img src="images/dango/done/archer.png"/>
 <img src="images/items/steel_sword.png"/>
 <img src="images/items/iron_sword.png"/>
 <img src="images/items/iron_bow.png"/>
+
 </div>
 </body>
 </html>
