Remove aid and con stats

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 <div class="title">
 <img src="images/title_cropped.png" />
-<div class="version">demo-v0.00001a</div>
+<div class="version">demo-v0.0001</div>
 </div>
 <script>
 $(window).load(init)
@@ -213,10 +213,6 @@ $(window).load(init)
                         <tr>
                             <td>Res</td><td class="stat res"></td>
                             <td>Move</td> <td class="stat move"></td>
-                        </tr>
-                        <tr>
-                            <td>Aid</td><td class="stat aid"></td>
-                            <td>Con</td> <td class="stat con"></td>
                         </tr>
                     </table>
                 </div>
