Battle stats panel now shows equipped weapon

--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@ $(window).load(init)
             </div>
             <div class="battle-stats-panel">
                 <table>
-                    <tr><td colspan="3" class="atk-name blue-box"></td></tr>
+                    <tr>
+                        <td colspan="3" class="atk-name blue-box">
+                            <span></span><img class="weapon" />
+                        </td>
+                    </tr>
                     <tr>
                         <td class="def-hit red-box">
                             <span class="stat"></span>
@@ -112,7 +116,11 @@ $(window).load(init)
                             <span class="stat"></span>
                         </td>
                     </tr>
-                    <tr><td colspan="3" class="def-name red-box"></td></tr>
+                    <tr>
+                        <td colspan="3" class="def-name red-box">
+                            <img class="weapon" /><span></span>
+                        </td>
+                    </tr>
                 </table>
             </div>
         </div>
