--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ $(window).load(init)
                 <table>
                     <tr>
                         <td colspan="3" class="atk-name blue-box">
-                            <span></span><img class="weapon" />
+                            <span></span><img class="weapon-arrow" /><img class="weapon" />
                         </td>
                     </tr>
                     <tr>
@@ -118,7 +118,7 @@ $(window).load(init)
                     </tr>
                     <tr>
                         <td colspan="3" class="def-name red-box">
-                            <img class="weapon" /><span></span>
+                            <img class="weapon-arrow" /><img class="weapon" /><span></span>
                         </td>
                     </tr>
                 </table>
