--- a/index.html
+++ b/index.html
@@ -90,29 +90,29 @@ $(window).load(init)
                         </td>
                     </tr>
                     <tr>
-                        <td class="def-hit red-box">
+                        <td class="stat def-hit red-box">
                             <span class="stat"></span>
                         </td>
                         <td class="hit neutral-box">HIT</td>
-                        <td class="atk-hit blue-box">
+                        <td class="stat atk-hit blue-box">
                             <span class="stat"></span>
                         </td>
                     </tr>
                     <tr>
-                        <td class="def-dmg red-box">
+                        <td class="stat def-dmg red-box">
                             <span class="stat"></span><span class="x2">&times;2</span>
                         </td>
                         <td class="dmg neutral-box">DMG</td>
-                        <td class="atk-dmg blue-box">
+                        <td class="stat atk-dmg blue-box">
                             <span class="stat"></span><span class="x2">&times;2</span>
                         </td>
                     </tr>
                     <tr>
-                        <td class="def-crt red-box">
+                        <td class="stat def-crt red-box">
                             <span class="stat"></span>
                         </td>
                         <td class="crt neutral-box">CRT</td>
-                        <td class="atk-crt blue-box">
+                        <td class="stat atk-crt blue-box">
                             <span class="stat"></span>
                         </td>
                     </tr>
