Add HP to battle stats panel
bug fixes

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@ $(window).load(init)
                         </td>
                     </tr>
                     <tr>
+                        <td class="stat def-hp red-box">
+                            <span class="stat"></span>
+                        </td>
+                        <td class="hp neutral-box">HP</td>
+                        <td class="stat atk-hp blue-box">
+                            <span class="stat"></span>
+                        </td>
+                    </tr>
+                    <tr>
                         <td class="stat def-hit red-box">
                             <span class="stat"></span>
                         </td>
