Terrain box now updates

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="lib/ui/battleStatsPanel.js"></script>
     <script src="lib/ui/message.js"></script>
     <script src="lib/ui/endTurn.js"></script>
+    <script src="lib/ui/terrainBox.js"></script>
 
     <script src="lib/chapter.js"></script>
     <script src="lib/playerTurn.js"></script>
@@ -33,7 +34,6 @@
     <script src="lib/unit.js"></script>
     <script src="lib/uclass.js"></script>
 
-    <script src="lib/chapters/testHuge.js"></script>
     <script src="lib/chapters/chapter1.js"></script>
 
 </head>
@@ -142,6 +142,7 @@ $(window).load(init)
         </div>
         <div class="sidebar right-sidebar">
             <div class="victory-condition neutral-box"></div>
+            <div class="terrain-box neutral-box"></div>
         </div>
     </div>
     <div class="game-info">
